fix: project img's for small screen on firefox

--- a/src/index.css
+++ b/src/index.css
@@ -466,7 +466,12 @@ nav .nav__logo {
 }
 .project__img.firefox {
   margin-top: 0;
-  height: min-content;
+  width: 70%;
+}
+@media screen and (min-width: 464px) {
+  .project__img.firefox {
+    width: 40%;
+  }
 }
 @media screen and (min-width: 342px) {
   .project__links {
@@ -511,6 +516,7 @@ nav .nav__logo {
     justify-content: space-evenly;
     align-items: start;
     height: 100%;
+    max-width: 70%;
   }
   .project__links {
     margin-bottom: 16px;
@@ -530,6 +536,9 @@ nav .nav__logo {
     margin: 0 auto;
     margin-top: -120px;
     align-self: end;
+  }
+  .project__img.firefox {
+    height: 100%;
   }
 }
 
